# BSVAE

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  sim.yaml
docs/: bsvae_networks.md  cli.md  conf.py  contributing.md  faq.md  hpc.md  hyperparam.ini  hyperparameters.md  index.md  installation.md  networks.md  quickstart.md  requirements.txt  tutorial.md  usage.md
docs/api/: models.md  utils.md
scripts/: benchmark_sims.py  calibrate_nb_from_gtex.py  gtex_calibrated_params.json
src/bsvae/: __init__.py  hyperparam.ini  main.py
src/bsvae/cli/: __init__.py  networks.py  simulate.py  sweep_k.py  train.py
src/bsvae/latent/: __init__.py  latent_analysis.py  latent_export.py
src/bsvae/models/: __init__.py  decoder.py  encoder.py  gmm_prior.py  gmvae.py  losses.py  structured.py
src/bsvae/networks/: __init__.py  cli.py  extract_networks.py  module_extraction.py  utils.py
src/bsvae/simulation/: __init__.py  generate.py  metrics.py  scenario.py
src/bsvae/structuredvae/models/: decoder.py  encoder.py  losses.py  structured_vae.py  vae.py
src/bsvae/utils/: __init__.py  datasets.py  evaluate.py  hierarchy.py  modelIO.py  ppi.py  training.py
tests/: test_isoform.py  test_main.py  test_models.py  test_module_extraction.py  test_networks.py  test_simulation.py  test_training_utils.py  test_utils.py  test_utils_extra.py
verification/: step_0_tests.sh  step_1_regression.sh  step_2_anticollapse.sh  step_3_check_losses.py
