[project]
name = "bsvae"
version = "0.1.0"
description = ""
authors = [
    {name = "Kynon J Benjamin",email = "kj.benjamin90@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch (>=2.8.0,<3.0.0)",
    "numpy (<2.3)",
    "pandas (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "mygene (>=3.2.2,<4.0.0)",
    "networkx (>=3.5,<4.0)",
    "scipy (>=1.16.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "bsvae", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
